--- a/CanYou3/Dashboard.storyboard
+++ b/CanYou3/Dashboard.storyboard
@@ -23,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GeW-Hj-JTV">
-                                <rect key="frame" x="16" y="20" width="343" height="601"/>
+                                <rect key="frame" x="16" y="64" width="343" height="557"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -52,8 +52,27 @@
                             <constraint firstAttribute="trailing" secondItem="UVP-Xa-3zJ" secondAttribute="trailing" constant="16" id="YAI-MZ-TMr"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="qNU-hO-fuE"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lM7-3N-DnA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1060" y="133.5832083958021"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="duv-Qt-SZe">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ABZ-FI-FYf" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="fOu-jZ-12G">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="nuV-ql-xtG" kind="relationship" relationship="rootViewController" id="0af-Ue-aKw"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Xq3-SY-cKG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="120.8" y="133.5832083958021"/>
         </scene>
