--- a/CanYou3/SettingBirthDate.storyboard
+++ b/CanYou3/SettingBirthDate.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="6Nu-R4-LEZ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -21,7 +21,7 @@
                             <tableViewSection headerTitle="Birthdate" id="nvg-Oq-6Ik">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="217" id="5ss-7B-sCv">
-                                        <rect key="frame" x="0.0" y="56" width="375" height="217"/>
+                                        <rect key="frame" x="0.0" y="55.5" width="375" height="217"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5ss-7B-sCv" id="c0S-ns-rSq">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="217"/>
@@ -57,7 +57,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="datePicker" destination="ltC-1a-xB6" id="Qyx-V2-DY4"/>
+                        <outlet property="datePicker" destination="ltC-1a-xB6" id="vt7-Gn-OkA"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="a0e-BC-xhn" userLabel="First Responder" sceneMemberID="firstResponder"/>
