--- a/CanYou3/SettingAlarm.storyboard
+++ b/CanYou3/SettingAlarm.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="nUP-FG-Rkc">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -13,7 +13,7 @@
         <!--Setting Alarm Table View Controller-->
         <scene sceneID="deH-kD-nOs">
             <objects>
-                <tableViewController storyboardIdentifier="SettingAlarmTableViewController" id="nUP-FG-Rkc" customClass="SettingAlarmTableViewController" customModule="CanYou" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="SettingAlarmTableViewController" id="nUP-FG-Rkc" customClass="SettingAlarmTableViewController" customModule="CanYou3" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="none" rowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="Haz-d8-h6S">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -22,7 +22,7 @@
                             <tableViewSection headerTitle="Alarm" id="Udr-fv-1JX">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="3J2-aF-34m" userLabel="설정">
-                                        <rect key="frame" x="0.0" y="56" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="55.5" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3J2-aF-34m" id="5WG-7V-Qyi">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -53,7 +53,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="f2e-eu-n6i" userLabel="설정">
-                                        <rect key="frame" x="0.0" y="100" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="99.5" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="f2e-eu-n6i" id="cyJ-Yj-CCD">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -93,8 +93,8 @@
                     </tableView>
                     <navigationItem key="navigationItem" id="4mx-mg-JRP"/>
                     <connections>
-                        <outlet property="alarmSwitch" destination="tTT-ip-3Eh" id="Kit-ZP-Uoe"/>
-                        <outlet property="randomAlarmSwitch" destination="rfM-UA-qwn" id="pIo-mU-w8o"/>
+                        <outlet property="alarmSwitch" destination="tTT-ip-3Eh" id="1eY-Fj-Wo5"/>
+                        <outlet property="randomAlarmSwitch" destination="rfM-UA-qwn" id="26l-Mo-qFn"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YW1-mK-hb6" userLabel="First Responder" sceneMemberID="firstResponder"/>
