--- a/CanYou3/SettingCigaretteDaily.storyboard
+++ b/CanYou3/SettingCigaretteDaily.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Rwz-ix-lOR">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -12,7 +12,7 @@
         <!--Setting Cigarette Daily Table View Controller-->
         <scene sceneID="3Ot-kf-k04">
             <objects>
-                <tableViewController storyboardIdentifier="SettingCigaretteDailyTableViewController" id="Rwz-ix-lOR" customClass="SettingCigaretteDailyTableViewController" customModule="CanYou" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="SettingCigaretteDailyTableViewController" id="Rwz-ix-lOR" customClass="SettingCigaretteDailyTableViewController" customModule="CanYou3" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="none" rowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="9RZ-Cr-IrC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -21,7 +21,7 @@
                             <tableViewSection headerTitle="Daily cigarette" id="66i-Sp-BQd">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="phw-7K-0kd" userLabel="설정">
-                                        <rect key="frame" x="0.0" y="56" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="55.5" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="phw-7K-0kd" id="njW-qJ-ify">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -58,7 +58,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="textField" destination="3aS-uU-VAM" id="TqH-tK-pEz"/>
+                        <outlet property="textField" destination="3aS-uU-VAM" id="V4e-2w-tlM"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K09-W8-7HE" userLabel="First Responder" sceneMemberID="firstResponder"/>
