--- a/CanYou3/SettingStartDate.storyboard
+++ b/CanYou3/SettingStartDate.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="if1-fa-SJl">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -21,7 +21,7 @@
                             <tableViewSection headerTitle="Start date" id="UVH-7D-5wF">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="217" id="6L1-Yq-LuM">
-                                        <rect key="frame" x="0.0" y="56" width="375" height="217"/>
+                                        <rect key="frame" x="0.0" y="55.5" width="375" height="217"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6L1-Yq-LuM" id="eR7-zy-gbl">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="217"/>
@@ -57,7 +57,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="datePicker" destination="0kl-MC-KLI" id="cVM-Zg-oDI"/>
+                        <outlet property="datePicker" destination="0kl-MC-KLI" id="WvH-9o-G5F"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zXp-Fk-Tb7" userLabel="First Responder" sceneMemberID="firstResponder"/>
